--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -17,14 +17,16 @@
         android:id="@+id/relativeLayout"
         android:padding="16dp"
         />
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="20dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-        <TextView
+
+    <ImageView
+        android:id="@+id/item_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
             android:id="@+id/item_title"
             android:layout_width="236dp"
             android:layout_height="39dp"
@@ -32,16 +34,17 @@
             app:layout_constraintLeft_toRightOf="@+id/item_image"
             android:layout_marginStart="140dp"
             android:layout_marginTop="10dp"
-            android:textSize="30sp"/>
-        <TextView
-            android:id="@+id/item_detail"
-            android:layout_width="236dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="70dp"
-            app:layout_constraintTop_toBottomOf="@+id/idem_title"
-            app:layout_constraintLeft_toRightOf="@+id/item_image"/>
+            android:textSize="20sp"/>
 
+    <TextView
+        android:id="@+id/item_detail"
+        android:layout_width="236dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="70dp"
+        android:textSize="11sp"
+        app:layout_constraintLeft_toRightOf="@+id/item_image"
+        app:layout_constraintTop_toBottomOf="@+id/idem_title" />
 
 
 </androidx.cardview.widget.CardView>
