--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -19,8 +19,8 @@
         android:padding="16dp"
         />
 
-    <ImageView
-        android:id="@+id/item_image"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/titleImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="20dp"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/item_title"
+            android:id="@+id/tvHeading"
             android:layout_width="236dp"
             android:layout_height="39dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
             android:textSize="20sp"/>
 
     <TextView
-        android:id="@+id/item_detail"
+        android:id="@+id/tvDetail"
         android:layout_width="236dp"
         android:layout_height="43dp"
         android:layout_marginStart="140dp"
