--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -12,12 +12,12 @@
     >
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!--<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relativeLayout"
         android:padding="16dp"
-        />
+        /> -->
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/titleImage"
