--- a/app/src/main/res/layout/ajustes_layout.xml
+++ b/app/src/main/res/layout/ajustes_layout.xml
@@ -12,8 +12,11 @@
         android:text="Activar sonido"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_notifications" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_notifications"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <CheckBox
         android:id="@+id/checkBox_notifications"
@@ -21,11 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="158dp"
         android:layout_marginEnd="159dp"
-        android:layout_marginBottom="240dp"
+        android:layout_marginBottom="308dp"
         android:text="Activar notificaciones"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.246"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
